admission/ValidatingAdmissionPolicy/policies/read-only-root-filesystem/ephemeralcontainers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: read-only-root-filesystem-ephemeralcontainers
  annotations:
    kubeapt.io/uuid: "d1b97c40-d989-4e75-b984-dab87225265c"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
---
# Command: kubectl debug -n policy-test read-only-root-filesystem-ephemeralcontainers -it --image=busybox:1.36 --custom=policies/read-only-root-filesystem/ephemeralcontainers/deny-kubectl-debug-custom.yaml
